--- a/dancing-studio/Web.config
+++ b/dancing-studio/Web.config
@@ -53,6 +53,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="StudioContext" connectionString="data source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\StudioContext.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="StudioContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\StudioContext.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
